--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.4.1",
+    "formik": "^2.1.4",
+    "mdbreact": "^4.26.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-select-search": "^1.2.1",
+    "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
     "start": "set PORT=8000 && react-scripts start",
